# autoxrddemo

./: .gitignore  CLAUDE.md  DESIGN.md  build_notebook.py  pyproject.toml  requirements.txt
autoxrd/: __main__.py  analyzer.py  fitter.py  loader.py  reporter.py
data/synthetic_quartz/: Quartz_Anneal_01.txt  Quartz_Anneal_02.txt  Quartz_Anneal_03.txt  Quartz_Anneal_04.txt  Quartz_Anneal_05.txt  Quartz_Anneal_06.txt  Quartz_Anneal_07.txt  Quartz_Anneal_08.txt  generate_synthetic.py
data/xrd_samples/: Calcite__R050048.txt  Corundum__R040096.txt  Fluorite__R050115.txt  Kaolinite__R140004.txt  Magnetite__R061111.txt  Perovskite__R050456.txt  Quartz__R040031.txt  Rutile__R040049.txt  download_samples.py
explainer/: index.html
notebooks/: xrd_batch_analysis.ipynb
output/reports/: xrd_memo.html
pipeline/: analyzer.py  fitter.py  reporter.py
templates/: memo_template.html
tests/: conftest.py  test_analyzer.py  test_fitter.py  test_loader.py  test_main.py
