[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "autoxrd"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "lmfit>=1.2",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autoxrd*"]
